# valueskins

./: .env.example  .gitignore  .semgrep.yml  .snyk  00_START_HERE.txt  ACQUISITION_READY_BUILD_COMPLETE.md  API_VERSIONING.md  ARCHITECTURE_GUIDE.txt  AUDIT_FIXES_SUMMARY.md  AVATAR_FEATURES.md  BACKEND_DEPLOYMENT.md  BLOCKER_SOLUTIONS.md  BUILD_SUMMARY.md  BUSINESS_UNIT_ECONOMICS.md  CLAUDE 3.md  CLAUDE 4.md  CLAUDE.md  CLAUDE_DOS_AND_DONTS.md  CODEBASE_EXPLAINED_FOR_INVESTORS.md  CODEOWNERS  CODE_IMPROVEMENTS_SUMMARY.md  CODE_QUALITY_ANALYSIS.md  COMPLETION_SUMMARY.md  COMPLIANCE_AUDIT.md  COUNTER_OFFER_CALCULATION.md  CREATOR_DATA_MIGRATION.md  CREATOR_DATA_SYSTEM.md  CRITICAL_FIXES_SUMMARY.md  DETAILED_FIXES.md  DEVELOPER_QUICK_REFERENCE.md  DISASTER_RECOVERY.md  DOCKER_PRODUCTION_DEPLOYMENT.md  Dockerfile  ENGINEERING_STANDARDS.md  FEATURES_IMPLEMENTED.md  FOLDER_GUIDE.txt  FORM_1A_EXAM_REQUEST.html  FORM_1A_EXAM_REQUEST.md  FORM_2_PROVISIONAL_SPEC.html  FORM_2_PROVISIONAL_SPEC.md  (+69 more)
backend/: Cargo.toml  Dockerfile
backend/ai_service/: Cargo.toml
backend/ai_service/src/: scoring.rs
backend/analytics_service/: Cargo.toml
backend/analytics_service/src/: earnings_benchmarks.rs  event_tracker.rs  lib.rs  model.rs  service.rs
backend/api_gateway/: Cargo.toml
backend/api_gateway/src/: main.rs
backend/api_gateway/tests/: integration_test.rs
backend/auth_service/: Cargo.toml
backend/auth_service/src/: error.rs  google_oauth.rs  instagram_oauth.rs  lib.rs  linkedin_oauth.rs  tiktok_oauth.rs  token.rs  verify.rs  youtube_oauth.rs
backend/brand_api/: Cargo.toml
backend/brand_api/src/: auth.rs  handlers.rs  lib.rs  models.rs  service.rs  webhooks.rs
backend/communities_service/: Cargo.toml
backend/communities_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/contract_service/: Cargo.toml
backend/contract_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/credential_service/: Cargo.toml
backend/credential_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/credit_service/: Cargo.toml
backend/credit_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs
backend/linkedin_service/: Cargo.toml
backend/linkedin_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/load-tests/: auth-abuse.js  large-payload-defense.js  malformed-json-flood.js  rate-limit-flood.js  refresh-abuse.js  run-all.sh  smoke-core.js  timeout-pressure.js
backend/marketplace_service/: Cargo.toml
backend/marketplace_service/src/: barter_service.rs  brand_verification_service.rs  completeness_service.rs  dispute_service.rs  fraud_detection.rs  fraud_service.rs  gdpr_service.rs  handlers.rs  interest_handlers.rs  interest_service.rs  lib.rs  models.rs  opportunity_source.rs  payout_service.rs  reputation_service.rs  service.rs  underwriting_service.rs
backend/marketplace_service/tests/: integration_test.rs
backend/matching_service/: Cargo.toml
backend/matching_service/src/: algorithm.rs  handlers.rs  lib.rs  models.rs  service.rs
backend/migrations/: 20240130000000_init_schema.sql  20240130000001_analytics_schema.sql  20240130000002_brands_schema.sql  20240201000000_mim_schema.sql  20240201000001_user_stickers.sql  20240201000002_profession_requests.sql  20240202000000_brand_api_schema.sql  20240202000001_referral_schema.sql  20240202000002_waitlist_schema.sql  20240202000003_transparent_scoring_schema.sql  20240202000004_marketplace_schema.sql  20240202000005_webhook_analytics_schema.sql  20240203000000_deal_room_schema.sql  20240204000000_communities_schema.sql  20240215000000_valueskin_hide_delete.sql  20240220000000_reputation_schema.sql  20240220000001_community_tier_column.sql  20240220000002_credentials_identity_schema.sql  20240220000003_escrow_disputes_schema.sql  20240220000004_barter_toggle.sql  20240221000000_matching_and_settings.sql  20240222000000_linkedin_profiles.sql  20240222000001_linkedin_connections.sql  20240222000002_linkedin_recommendations.sql  20240222000003_linkedin_invitations.sql  20240223000000_csuite_advantage.sql  20240223000001_campaign_gating.sql  20240224000000_platform_features.sql  20240225000000_notification_queue.sql  20240226000000_creator_interest_signups.sql  20240227000001_fraud_prevention.sql  20240227000002_reputation_bootstrap.sql  20240228000000_scale_hardening.sql  20240228000001_prod_hardening.sql  20240229000000_equity_insurance_collective_mediakit.sql  20240301000000_platform_config.sql  20240302000000_agency_elimination.sql  20240303000000_agency_indexes.sql  20240304000000_deal_room_messages.sql  20240305000000_payment_preferences.sql  (+6 more)
backend/notification_service/: Cargo.toml
backend/notification_service/src/: email.rs  handlers.rs  lib.rs  messaging.rs  sendgrid_service.rs  templates.rs
backend/notification_service/templates/: deal_completed.html  level_up.html  opportunity_match.html  referral_reward.html  waitlist_welcome.html
backend/notification_service/tests/: email_integration_test.rs
backend/payment_service/: Cargo.toml
backend/payment_service/src/: audit_log.rs  escrow.rs  idempotency.rs  lib.rs  payment_processor.rs  stripe_integration.rs
backend/persona_service/: Cargo.toml
backend/platform_service/: Cargo.toml
backend/platform_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/pricing_service/: Cargo.toml
backend/pricing_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/recommendation_service/: Cargo.toml
backend/recommendation_service/src/: model.rs  service.rs
backend/referral_service/: Cargo.toml
backend/referral_service/src/: handlers.rs  lib.rs  models.rs  service.rs
backend/reputation_service/: Cargo.toml
backend/reputation_service/src/: calculator.rs  (+4 more)
backend/scripts/: seed.sh  seed.sql  seed_test_data.sql
backend/settings_service/: Cargo.toml
backend/shared/: Cargo.toml
backend/social_service/: Cargo.toml
backend/storage_service/: Cargo.toml
backend/tax_service/: Cargo.toml
backend/waitlist_service/: Cargo.toml
(+620 files in other folders)
