[package]
name = "ai_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
