[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = "0.4"
async-trait = "0.1"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
urlencoding = "2.1"
base64 = "0.21"
