[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
handlebars = "5.1"
shared = { path = "../shared" }
