[package]
name = "referral_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
shared = { path = "../shared" }
auth_service = { path = "../auth_service" }
sha2 = "0.10"
hex = "0.4"
