[package]
name = "reputation_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.21"
shared = { path = "../shared" }
auth_service = { path = "../auth_service" }
