[package]
name = "storage_service"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
aws-sdk-s3 = "1.10"
aws-sdk-cloudfront = "1.10"
aws-config = "1.1"
aws-smithy-runtime = "1.1"
tokio = { version = "1", features = ["full"] }
